# Sovereign-Node-9010

./: .env.example  .markdownlint.json  .prettierrc  6. Emerging Methods (2026).txt  AGENTS.md  Aider codg..txt  Aider deploy 1 fail.txt  DEPLOY.md  EXTRACTED_FROM_DUMPS__Advanced_Detection_2026.md  README.md  README_BUILD.md  Thinking about your request.txt  Why.txt  Windows PowerSh4ell.txt  You are now working inside my Grok.txt  azure-push-manifest.json  azure.yaml  build_verify_full_core.py  eslint.config.js  index.html  laptop settings.txt.txt  pre-commit-lint.json  python-pep8-reviewer.txt.txt  sovereign_core.py  sql-js.d.ts  tailwind.config.js  test_ontology_modes.py  verify_structural.py
.github/: copilot-instructions.md  dependabot.yml
03_Vault/: sovereign_facts.json  truth_ledger.json
DEPLOYMENT_INSTRUCTIONS/: ACTIONABLE_DEPLOY_NOW.md  DEPLOY_IMMEDIATELY.md  DEPLOY_NOW.sh  FOR_BEGINNERS_DETAILED_GUIDE.md  REAL_WORLD_CHECKLIST.md  REFACTORED_SUMMARY.md
SovereignNode_DevSecOps_Toolkit/: # Before any changes.txt  Discover-SystemState.ps1  Professional Research Findings & Co settings.txt
docs/: DEPLOYMENT-RECORD.md  FRAMEWORK-EVALUATION.md  IMPLEMENTATION-ROADMAP.md  INDEX.md  LIE-AUDIT-2026-03-08.md  PM-DECISION.md  RUNBOOK.md  SESSION-LOG-2026-03-07.md  VALIDATION-CHECKLIST.md
project/: .gitconfig  .wslconfig  Windows PowerShell.txt
scripts/: PSScriptAnalyzerSettings.psd1  deploy-azure.ps1  deploy-azure.sh  generate-manifest.js  (+1 more)
truthprojectofficial-max-main/src-tauri/: Cargo.toml  tauri.conf.json
truthprojectofficial-max-main/src-tauri/src/: main.rs
(+158 files in other folders)
