[package]
name = "sovereign-node"
version = "0.1.0"
description = "Sovereign Node 9010"
authors = ["Truth Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
